updating button styles

--- a/index.html
+++ b/index.html
@@ -22,55 +22,57 @@
     <div class="container">
         <!-- Timeblocks go here -->
         <div class="row">
-            <div class="col-2 mt-4 time-block t9">9:00 AM</div>
-            <textarea class="col-8 e5"></textarea>
-            <button>Save</button>
+            <div class="col-2 mt-4 time-block">9:00 AM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
         </div>
 
         <div class="row">
-            <div class="col-2 mt-4 time-block t9">10:00 AM</div>
-            <textarea class="col-8 e5"></textarea>
-            <button>Save</button>
+            <div class="col-2 mt-4 time-block">10:00 AM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
         </div>
 
         <div class="row">
-            <div class="col-2 mt-4 time-block t9">11:00 AM</div>
-            <textarea class="col-8 e5"></textarea>
-            <button>Save</button>
+            <div class="col-2 mt-4 time-block">11:00 AM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
         </div>
 
         <div class="row">
-            <div class="col-2 mt-4 time-block t9">12:00 PM</div>
-            <textarea class="col-8 e5"></textarea>
-            <button>Save</button>
+            <div class="col-2 mt-4 time-block">12:00 PM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
         </div>
-
         <div class="row">
-            <div class="col-2 mt-4 time-block t9">1:00 PM</div>
-            <textarea class="col-8 e5"></textarea>
-            <button>Save</button>
-            <div class="row">
-                <div class="col-2 mt-4 time-block t9">2:00 PM</div>
-                <textarea class="col-8 e5"></textarea>
-                <button>Save</button>
-            </div>
-            <div class="row">
-                <div class="col-2 mt-4 time-block t9">3:00 PM</div>
-                <textarea class="col-8 e5"></textarea>
-                <button>Save</button>
-            </div>
-            <div class="row">
-                <div class="col-2 mt-4 time-block t9">4:00 PM</div>
-                <textarea class="col-8 e5"></textarea>
-                <button>Save</button>
-            </div>
-
-            <div class="row">
-                <div class="col-2 mt-4 time-block t9">5:00 PM</div>
-                <textarea class="col-8 e5"></textarea>
-                <button>Save</button>
-            </div>
+            <div class="col-2 mt-4 time-block">1:00 PM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
         </div>
+        <div class="row">
+            <div class="col-2 mt-4 time-block">2:00 PM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
+        </div>
+        <div class="row">
+            <div class="col-2 mt-4 time-block">3:00 PM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
+        </div>
+        <div class="row">
+            <div class="col-2 mt-4 time-block">4:00 PM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
+        </div>
+        <div class="row">
+            <div class="col-2 mt-4 time-block">5:00 PM</div>
+            <textarea class="col-8"></textarea>
+            <button type="button" class="btn btn-outline-success">Save</button>
+        </div>
+        
+
+       
+    </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
