--- a/index.html
+++ b/index.html
@@ -22,52 +22,52 @@
     <div class="container">
         <!-- Timeblocks go here -->
         <div class="row">
-            <div class="col-2 mt-4 time-block">9:00 AM</div>
+            <div class="col-2 mt-4 time-block" id="time">9:00 AM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
 
         <div class="row">
             <div class="col-2 mt-4 time-block">10:00 AM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
 
         <div class="row">
             <div class="col-2 mt-4 time-block">11:00 AM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
 
         <div class="row">
             <div class="col-2 mt-4 time-block">12:00 PM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
         <div class="row">
             <div class="col-2 mt-4 time-block">1:00 PM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
         <div class="row">
             <div class="col-2 mt-4 time-block">2:00 PM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
         <div class="row">
             <div class="col-2 mt-4 time-block">3:00 PM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
         <div class="row">
             <div class="col-2 mt-4 time-block">4:00 PM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
         <div class="row">
             <div class="col-2 mt-4 time-block">5:00 PM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="btn btn-outline-success">Save</button>
+            <button type="button" class="saveBtn">Save</button>
         </div>
         
 
