--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="container">
         <!-- Timeblocks go here -->
         <div class="row">
-            <div class="col-2 mt-4 time-block" id="time">9:00 AM</div>
+            <div class="col-2 mt-4 time-block">9:00 AM</div>
             <textarea class="col-8"></textarea>
-            <button type="button" class="saveBtn">Save</button>
+            <button type="button" class="saveBtn nine">Save</button>
         </div>
 
         <div class="row">
