copying previous function to implement to other IDs

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
         <!-- Timeblocks go here -->
         <div class="row">
             <div class="col-2 mt-4 time-block">9:00 AM</div>
-            <textarea class="col-8"></textarea>
-            <button type="button" class="saveBtn nine">Save</button>
+            <textarea class="col-8" id="nineText"></textarea>
+            <button type="button" class="saveBtn" id="nineBtn">Save</button>
         </div>
 
         <div class="row">
             <div class="col-2 mt-4 time-block">10:00 AM</div>
-            <textarea class="col-8"></textarea>
-            <button type="button" class="saveBtn">Save</button>
+            <textarea class="col-8" id="tenText"></textarea>
+            <button type="button" class="saveBtn" id="tenBtn">Save</button>
         </div>
 
         <div class="row">
             <div class="col-2 mt-4 time-block">11:00 AM</div>
-            <textarea class="col-8"></textarea>
-            <button type="button" class="saveBtn">Save</button>
+            <textarea class="col-8" id="elevenText"></textarea>
+            <button type="button" class="saveBtn" id="elevenBtn">Save</button>
         </div>
 
         <div class="row">
             <div class="col-2 mt-4 time-block">12:00 PM</div>
-            <textarea class="col-8"></textarea>
-            <button type="button" class="saveBtn">Save</button>
+            <textarea class="col-8" id="twelveText"></textarea>
+            <button type="button" class="saveBtn" id="twelveBtn">Save</button>
         </div>
         <div class="row">
             <div class="col-2 mt-4 time-block">1:00 PM</div>
