--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <h1 class="display-3">Work Day Scheduler</h1>
         <p class="lead">A simple calendar app for scheduling your work day</p>
         <p id="currentDay" class="lead"></p>
+        <p id="currentTime" class="lead"></p>
     </header>
     <div class="container">
         <!-- Timeblocks go here -->
