--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
             <textarea class="col-8" id="fiveText"></textarea>
             <button type="button" class="saveBtn" id="fiveBtn">Save</button>
         </div>
+        <div id="7" class="row">
+            <div class="col-2 mt-4 time-block">5:00 PM</div>
+            <textarea class="col-8" id="sevenText"></textarea>
+            <button type="button" class="saveBtn" id="sevenBtn">Save</button>
+        </div>
         
 
        
