--- a/index.html
+++ b/index.html
@@ -25,55 +25,50 @@
         <div id="9" class="row">
             <div class="col-2 mt-4 time-block">9:00 AM</div>
             <textarea class="col-8" id="nineText"></textarea>
-            <button type="button" class="saveBtn" id="nineBtn">Save</button>
+            <button type="button" class="col -2 saveBtn"  id="nineBtn">Save</button>
         </div>
 
         <div id="10" class="row">
             <div class="col-2 mt-4 time-block">10:00 AM</div>
             <textarea class="col-8" id="tenText"></textarea>
-            <button type="button" class="saveBtn" id="tenBtn">Save</button>
+            <button type="button" class="col -2 saveBtn"  id="tenBtn">Save</button>
         </div>
 
         <div id="11" class="row">
             <div class="col-2 mt-4 time-block">11:00 AM</div>
             <textarea class="col-8" id="elevenText"></textarea>
-            <button type="button" class="saveBtn" id="elevenBtn">Save</button>
+            <button type="button" class="col -2 saveBtn"  id="elevenBtn">Save</button>
         </div>
 
         <div id="12" class="row">
             <div class="col-2 mt-4 time-block">12:00 PM</div>
             <textarea class="col-8" id="twelveText"></textarea>
-            <button type="button" class="saveBtn" id="twelveBtn">Save</button>
+            <button type="button" class="col -2 saveBtn" id="twelveBtn">Save</button>
         </div>
         <div id="1" class="row">
             <div class="col-2 mt-4 time-block">1:00 PM</div>
             <textarea class="col-8" id="oneText"></textarea>
-            <button type="button" class="saveBtn" id="oneBtn">Save</button>
+            <button type="button" class="col -2 saveBtn" id="oneBtn">Save</button>
         </div>
         <div id="2" class="row">
             <div class="col-2 mt-4 time-block">2:00 PM</div>
             <textarea class="col-8" id="twoText"></textarea>
-            <button type="button" class="saveBtn" id="twoBtn">Save</button>
+            <button type="button" class="col -2 saveBtn" id="twoBtn">Save</button>
         </div>
         <div id="3" class="row">
             <div class="col-2 mt-4 time-block">3:00 PM</div>
             <textarea class="col-8" id="threeText"></textarea>
-            <button type="button" class="saveBtn" id="threeBtn">Save</button>
+            <button type="button" class="col -2 saveBtn" id="threeBtn">Save</button>
         </div>
         <div id="4" class="row">
             <div class="col-2 mt-4 time-block">4:00 PM</div>
             <textarea class="col-8" id="fourText"></textarea>
-            <button type="button" class="saveBtn" id="fourBtn">Save</button>
+            <button type="button" class="col -2 saveBtn" id="fourBtn">Save</button>
         </div>
         <div id="5" class="row">
             <div class="col-2 mt-4 time-block">5:00 PM</div>
             <textarea class="col-8" id="fiveText"></textarea>
-            <button type="button" class="saveBtn" id="fiveBtn">Save</button>
-        </div>
-        <div id="7" class="row">
-            <div class="col-2 mt-4 time-block">5:00 PM</div>
-            <textarea class="col-8" id="sevenText"></textarea>
-            <button type="button" class="saveBtn" id="sevenBtn">Save</button>
+            <button type="button" class="col -2 saveBtn" id="fiveBtn">Save</button>
         </div>
         
 
