commenting out 6PM

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             <textarea class="col-8" id="fiveText"></textarea>
             <button type="button" class="col -2 saveBtn" id="fiveBtn">Save</button>
         </div>
-        <div id="6" class="row">
+        <!-- <div id="6" class="row">
             <div class="col-2 mt-4 time-block">6:00 PM</div>
             <textarea class="col-8" id="sixText"></textarea>
             <button type="button" class="col -2 saveBtn" id="sixBtn">Save</button>
-        </div>
+        </div> -->
         
 
        
